fixed flickering of playing song thumbnail

--- a/src/style.css
+++ b/src/style.css
@@ -564,10 +564,6 @@ footer img {
     align-self: center;
 }
 
-footer img.hidden {
-    display: none;
-}
-
 .svg-button {
     fill: rgba(255, 255, 255, 0.8);
 }
